@startuml

title __CONTROLLER's Class Diagram__\n

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.AuthController {
          + Loginuser()
          + Registernewuser()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.LoginResponse {
          - jwttoken : String
          - rolename : String
          {static} - serialVersionUID : long
          + LoginResponse()
          + LoginResponse()
          + getRolename()
          + getToken()
          + setRolename()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.PlanningController {
          + addnewassignement()
          + deleteAssigbment()
          + exportplaningforoneuser()
          + exportplanningforteam()
          + updateAssignment()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.ProjectController {
          + addNewProject()
          + listAllProjects()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.SpecialityController {
          + ReasearchUserBySpeciality()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.TeamController {
          + Updateteamsid()
          + Viewallteams()
          + Viewteamsid()
          + addnewteam()
          + deleteteam()
          + deleteteamid()
          + getAllUsersForOneTeam()
      }
    }
  }
  

  namespace edu.pfe.staffing {
    namespace controller {
      class edu.pfe.staffing.controller.UserController {
          + addusertoateam()
          + allusers()
          + calculateAllScores()
          + getOneUserDetails()
      }
    }
  }
  

  edu.pfe.staffing.controller.AuthController o-- edu.pfe.staffing.service.AuthenticationService : authenticationService
  edu.pfe.staffing.controller.AuthController o-- edu.pfe.staffing.security.JwtTokenUtil : jwtTokenUtil
  edu.pfe.staffing.controller.AuthController o-- edu.pfe.staffing.security.UserDetailsServiceImpl : userDetailsServiceImpl
  edu.pfe.staffing.controller.AuthController o-- edu.pfe.staffing.service.UserService : userService
  edu.pfe.staffing.controller.LoginResponse .up.|> java.io.Serializable
  edu.pfe.staffing.controller.PlanningController o-- edu.pfe.staffing.service.AssignmentService : assignmentService
  edu.pfe.staffing.controller.PlanningController o-- edu.pfe.staffing.service.PlanningService : planningService
  edu.pfe.staffing.controller.PlanningController o-- edu.pfe.staffing.service.ProjectService : projectService
  edu.pfe.staffing.controller.PlanningController o-- edu.pfe.staffing.service.TeamService : teamService
  edu.pfe.staffing.controller.PlanningController o-- edu.pfe.staffing.service.UserService : userService
  edu.pfe.staffing.controller.ProjectController o-- edu.pfe.staffing.service.ProjectService : projectService
  edu.pfe.staffing.controller.SpecialityController o-- edu.pfe.staffing.service.UserService : userService
  edu.pfe.staffing.controller.TeamController o-- edu.pfe.staffing.service.TeamService : teamService
  edu.pfe.staffing.controller.UserController o-- edu.pfe.staffing.service.TeamService : teamService
  edu.pfe.staffing.controller.UserController o-- edu.pfe.staffing.service.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
